header gap fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Akira;
     background-color: rgb(0, 0, 0);
+    margin: 0px;
 }
 
 .header-panel {
@@ -8,6 +9,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .header-panel .title {
@@ -28,7 +30,7 @@ body {
     color: white;
     
     margin-right: 40px;
-    padding: 20px;
+    padding: 25px 20px 25px 20px ;
 
     border: 0px;
     border-radius: 10%;
@@ -43,13 +45,14 @@ body {
 .ranking {
     width: 90%;
     margin-top: 40px;
-    /* margin-left: 10%; */
+    
 }
 
 .tables {
     display: flex;
     justify-content: space-between;
-    gap: 2%; /* Adiciona um espaço entre as tabelas */
+    gap: 2%; 
+    padding-left: 20px;
 }
 
 .table-container {
@@ -62,8 +65,7 @@ body {
 
 
 .table-container-orange {
-
-    width: 50%;
+    width: 55%;
 }
 
 .title {
